@startuml
set separator ::

class rs::Shader {
	+create()
	+destroy()
	..
	+use()
	..
	+setUniform()
	--
	-id
}

class rs::TextureFormat {
	+filtered
	+textureFormat, sourceFormat
	+mipmaps
}
hide TextureFormat methods

class rs::Texture {
	+create()
	+destroy()
	..
	+use()
	..
	+getWidth()
	+getHeight()
	+getId()
	--
	-width, height
	-id
}

class rs::Material {
	+create()
	+destroy()
	..
	+use()
	..
	+addTexture()
	+setUniform()
	--
	-shader
	-textures
	-uniforms
}

class rs::Vertex {
	+position
	+color
	+atlas
	+normal
}
hide Vertex methods

class rs::Mesh {
	+create()
	+destroy()
	..
	+addVertex()
	+addGeometry()
	..
	+clear()
	+draw()
	--
	-vao, vbo
	-vertices
}

class rs::Glyph {
	+width
	+advance
	+uv
}
hide Glyph methods

class rs::Font {
	+create()
	+destroy()
	..
	+getTexture()
	+getGlyph()
	--
	-size, ascent
	-texture
	-glyphs
}

class rs::Sound {
	+create()
	+destroy()
	..
	+play()
	+loop()
	+stop()
	..
	+isPlaying()
	+isLooping()
	--
	-source
	-looping, playing
}

class rs::ResourceManager {
	+initFromConfig()
	+destroy()
	..
	+createResource()
	+getResource()
	--
	-stringToResource()
	..
	-shaders
	-textures
	-materials
	-meshes
	-fonts
	-sounds
}

Texture <-down- TextureFormat

Material <-- Shader
Material <-- Texture

Mesh <-down- Vertex

Font <-left- Glyph

ResourceManager *-down- Shader
ResourceManager *-down- Texture
ResourceManager *-left- Material
ResourceManager *-right- Mesh
ResourceManager *-up- Font
ResourceManager *-up- Sound

@enduml
